Update select-box component

--- a/src/app/shared/form-controls/select-box/select-box.component.html
+++ b/src/app/shared/form-controls/select-box/select-box.component.html
@@ -11,14 +11,17 @@
   [bindLabel]="bindLabel"
   [bindValue]="selectBoxConfig.bindByValue ? bindValue : null"
   [clearable]="selectBoxConfig.clearable"
+  [clearAllText]="selectBoxConfig.clearAllText"
   [closeOnSelect]="selectBoxConfig.closeOnSelect"
   [dropdownPosition]="selectBoxConfig.dropdownPosition"
   [groupBy]="selectBoxConfig.groupBy"
   [hideSelected]="selectBoxConfig.hideSelected"
+  [loadingText]="selectBoxConfig.loadingText"
   [minTermLength]="selectBoxConfig.minTermLength"
   [multiple]="selectBoxConfig.multiple"
   [notFoundText]="selectBoxConfig.notFoundText"
   [searchable]="selectBoxConfig.searchable"
+  [searchFn]="useCustomSearchFn ? customSearchFn : null"
   [typeToSearchText]="selectBoxConfig.typeToSearchText"
   [virtualScroll]="selectBoxConfig.virtualScroll"
   (change)="onChangedEvent($event)"
@@ -50,6 +53,32 @@
     <ng-container *ngIf="!optionTemplate">
      {{bindLabel ? item[bindLabel] : item}}
     </ng-container>
+  </ng-template>
+
+  <ng-template ng-header-tmp *ngIf="headerTemplate">
+    <ng-container *ngTemplateOutlet="headerTemplate;"></ng-container>
+  </ng-template>
+
+  <ng-template ng-footer-tmp *ngIf="footerTemplate">
+    <ng-container *ngTemplateOutlet="footerTemplate;"></ng-container>
+  </ng-template>
+
+  <ng-template ng-typetosearch-tmp>
+    <div class="ng-option disabled inner-message">
+        {{selectBoxConfig.typeToSearchText}}
+    </div>
+  </ng-template>
+
+  <ng-template ng-notfound-tmp>
+    <div class="ng-option disabled inner-message">
+        {{selectBoxConfig.notFoundText}}
+    </div>
+  </ng-template>
+
+  <ng-template ng-loadingtext-tmp>
+    <div class="ng-option disabled inner-message">
+        {{selectBoxConfig.loadingText}}
+    </div>
   </ng-template>
 
 </ng-select>
