--- a/src/app/views/recordable-subjects/parties/party-editor.component.html
+++ b/src/app/views/recordable-subjects/parties/party-editor.component.html
@@ -47,7 +47,7 @@
       <div fxFlex="40">
         <label>Participa como:</label>
         <emp-ng-select
-          [config]="{groupBy: 'items', clearable: false}"
+          [config]="{groupBy: 'items'}"
           [placeholder]="'( Seleccionar rol )'"
           [items]="rolesList"
           [showError]="roleUID.touched && roleUID.errors"
@@ -62,6 +62,7 @@
             <label>Sobre:</label>
             <emp-ng-select
               [items]="partUnits"
+              [config]="{clearable: true}"
               [placeholder]="'( U de M )'"
               [showError]="partUnitUID.touched && partUnitUID.errors"
               formControlName="partUnitUID"
@@ -81,7 +82,6 @@
           <div fxFlex="60">
             <label>De:</label>
             <emp-ng-select
-              [config]="{clearable: false }"
               bindLabel="fullName"
               [placeholder]="'Seleccionar una persona u organización'"
               [items]="partiesInRecordingActList"
