--- a/src/app/views/transactions/transaction-files/transaction-files-uploader.component.html
+++ b/src/app/views/transactions/transaction-files/transaction-files-uploader.component.html
@@ -13,7 +13,7 @@
           [readonly]="!canEdit"
           (fileControlEvent)="submitInstrumentFileEvent($event, 'InstrumentMainFile')"
           [config]="{textAccion: 'Agregar archivo PDF con el instrumento',
-                     fileTypes: 'pdf' }">
+                     filesTypes: ['pdf']}">
 
         </emp-ng-file-control>
       </div>
@@ -25,7 +25,7 @@
           [readonly]="!canEdit"
           (fileControlEvent)="submitInstrumentFileEvent($event, 'InstrumentAuxiliaryFile')"
           [config]="{textAccion: 'Agregar archivo PDF con el anexo',
-                     fileTypes: 'pdf'}">
+                     filesTypes: ['pdf']}">
 
         </emp-ng-file-control>
 
