Update shared module

--- a/src/app/shared/containers/card/card.component.html
+++ b/src/app/shared/containers/card/card.component.html
@@ -1,6 +1,6 @@
-<div class="card card-border card-shadow">
+<div class="card card-border" [class.card-shadow]="!showCardHeaderFlat">
 
-  <div class="card-header">
+  <div class="card-header" [class.card-header-flat]="showCardHeaderFlat">
 
     <div class="card-title">
       <span [innerHTML]="title | safeHtml"></span>
@@ -8,7 +8,7 @@
     </div>
 
     <div *ngIf="!disableClose" class="card-header-options">
-      <mat-icon (click)="onClose()">close</mat-icon>
+      <mat-icon class="card-icon" (click)="onClose()">close</mat-icon>
     </div>
 
   </div>
