--- a/src/app/shared/form-controls/date-picker/date-picker.component.scss
+++ b/src/app/shared/form-controls/date-picker/date-picker.component.scss
@@ -8,8 +8,7 @@
 @import "../../../../styles/general-styles";
 
 .picker {
-  width: 90px !important;
+  width: $date-picker-width  !important;
   margin: 2px 0 2px 0 !important;
-  padding: 2px 2px 2px 6px !important;
   border-radius: 2px 0 0 2px !important;
 }
