Add recordable-subjects-explorer tool

--- a/src/app/main-layout/main-layout.component.html
+++ b/src/app/main-layout/main-layout.component.html
@@ -57,9 +57,9 @@
 
       <container-element [ngSwitch]="toolSelected">
 
-        <div [style.width.px]="500">
+        <emp-land-recordable-subjects-tool *ngSwitchCase="'SearchRecordableSubject'">
 
-        </div>
+        </emp-land-recordable-subjects-tool>
 
       </container-element>
 
