--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -74,8 +74,9 @@ $layout-gradient-initial-color: $warning-color-dark;
 $layout-gradient-final-color: $warning-color;
 $layout-secondary-color: $secondary-color;
 $layout-secondary-color-dark: $secondary-color-dark;
-$toolbar-item-size: 35px;
-$toolbar-icon-size: 32px;
+$toolbar-item-size: 34px;
+$toolbar-icon-size: 24px;
+$toolbar-icon-color: $primary-color;
 
 //
 // Elements colors
@@ -151,9 +152,9 @@ $grid-footer-background-color: $disabled-color;
 $grid-border: 0;
 $grid-even-background-color: $white;
 $grid-odd-background-color: #f4f4f4 !default;
-$grid-hover-background-color: $selected-control-background-color;
-$grid-selected-background-color: $selected-control-background-color;
-$grid-selected-hover-background-color: $selected-control-background-color;
+$grid-hover-background-color: #f5f8fa;
+$grid-selected-background-color: #f0f3f5;
+$grid-selected-hover-background-color: #edf0f3;
 $grid-row-height: 35px;
 
 //
