Add permission for recordable subjects explorer

--- a/src/app/main-layout/toolbar/toolbar.component.html
+++ b/src/app/main-layout/toolbar/toolbar.component.html
@@ -7,7 +7,7 @@
   </emp-ng-search-box>
 
 
-  <button *empNgHasPermission="permissions.MODULE_SEARCH_SERVICES"
+  <button *empNgHasPermission="permissions.MODULE_SEARCH_RECORDABLE_SUBJECTS"
     class="toolbar-item"
     title="Explorador de folios electrónicos"
     [ngClass]="{'activate': toolSelected === 'SearchRecordableSubject'}"
