--- a/src/app/views/registration/recording-acts/recording-act-creator.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-creator.component.html
@@ -23,13 +23,6 @@
         </emp-ng-select>
       </div>
 
-      <div fxFlex="150px" fxLayoutAlign="end end" [style.paddingBottom.px]="2">
-        <button type="submit" (click)="submitRecordingAct()" [class.btn]="!formHandler.isValid"
-          [class.btn-action]="formHandler.isValid" [style.width.px]="150">
-          Registrar el acto
-        </button>
-      </div>
-
     </div>
 
     <div fxLayout="row">
@@ -205,6 +198,23 @@
 
         <input type="text" class="text-box" [formControlName]="controls.partitionNo"
           [class.invalid-control]="formHandler.showInvalidControl(controls.partitionNo)">
+
+      </div>
+
+    </div>
+
+    <mat-divider class="divider-padding"></mat-divider>
+
+    <div fxLayout="row">
+
+      <div fxFlex fxLayoutAlign="end">
+
+        <button type="submit"
+          [class.btn]="!formHandler.isValid"
+          [class.btn-action]="formHandler.isValid"
+          (click)="submitRecordingAct()">
+          Registrar el acto
+        </button>
 
       </div>
 
