Rfx add recordable-subject-editor + UI improvements

--- a/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
+++ b/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
@@ -203,7 +203,7 @@
 
         <button *ngIf="actions.can.editInstrument && !addMode"
           (click)="enableEditor(!editionMode)"
-          [ngClass]="editionMode ? 'btn-warning' : 'btn-action'">
+          [ngClass]="editionMode ? 'btn' : 'btn-action'">
           {{editionMode ? 'Descartar Cambios' : 'Editar Documento'}}
         </button>
 
