--- a/src/app/views/registration/recording-acts/recording-act-editor.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-editor.component.html
@@ -99,7 +99,7 @@
 
           <button *ngIf="recordingAct.actions.isEditable"
             (click)="enableEditor(!editionMode)"
-            [ngClass]="editionMode ? 'btn-warning' : 'btn-action'">
+            [ngClass]="editionMode ? 'btn' : 'btn-action'">
             {{ editionMode ? 'Descartar Cambios' : 'Editar Documento' }}
           </button>
 
