Fix text for recordable-subject tab

--- a/src/app/views/tract-index/tract-index-entry-tabbed-view/tract-index-entry-tabbed-view.component.html
+++ b/src/app/views/tract-index/tract-index-entry-tabbed-view/tract-index-entry-tabbed-view.component.html
@@ -31,7 +31,11 @@
 
       </mat-tab>
 
-      <mat-tab label="Acto jurídico">
+      <mat-tab label="Acto jurídico" disabled>
+
+      </mat-tab>
+
+      <mat-tab label="Predio">
 
         <ng-template matTabContent>
 
@@ -44,10 +48,6 @@
           </emp-land-recordable-subject-editor>
 
         </ng-template>
-
-      </mat-tab>
-
-      <mat-tab label="Predio" disabled>
 
       </mat-tab>
 
